# ecomp

./: AUTHORS  COPYING  Makefile  Makefile.am  Makefile.in  NEWS  README  TAGS  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  ecomorph.sh  ecomp-cube.pc  ecomp-cube.pc.in  ecomp-gconf.pc.in  ecomp-scale.pc  ecomp-scale.pc.in  ecomp.pc  ecomp.pc.in  libtool
animation/: Makefile  Makefile.am  Makefile.in  airplane3d.c  animation-internal.h  animation.c  animation.c-backup  beamup.c  burn.c  curvedfold.c  dodge.c  domino.c  dream.c  explode3d.c  fade.c  focusfade.c  fold3d.c  glide.c  horizontalfold.c  leafspread.c  magiclamp.c  options.c  particle.c  polygon.c  rollup.c  skewer.c  wave.c  zoomside.c
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
bcop/: Makefile  Makefile.in  bcop.pc  bcop.pc.in  config.h.in  configure  configure.ac
bcop/bcopconvert/: bcopconvert.xslt
bcop/src/: Makefile  Makefile.am  Makefile.in  bcop  bcop.in  bcop.xslt
cubereflex/: Makefile  Makefile.am  Makefile.in  cubereflex.c  cubereflex_options.c  cubereflex_options.h
data/: Makefile.am  ecomp.eet
debian/: control
debian/ecomp/debian/: changelog  control  ecomorph-core.install
debian/ecompconfig-python/debian/: changelog  control  copyright
debian/ecsm/debian/: changelog  control  copyright
debian/libecompconfig/debian/: changelog  control  copyright
debian/module-configmenu/debian/: changelog  control  copyright  rules
ecomp/ecompconfig/: Default.ini  config
expo/: Makefile  Makefile.am  Makefile.in  expo.c  expo_options.c  expo_options.h
images/: Makefile  Makefile.in
include/: Makefile  Makefile.am  Makefile.in  cube.h  ecomp.h  scale.h  text.h
jpeg/: Makefile  Makefile.am  Makefile.in  imgjpeg.c  imgjpeg_options.c  imgjpeg_options.h
libdecoration/: Makefile  Makefile.in  libdecoration.pc  libdecoration.pc.in
mblur/: Makefile  Makefile.am  Makefile.in  mblur.c  mblur_options.c  mblur_options.h
metadata/: Makefile  Makefile.am  Makefile.in  animation.xml  animation.xml.in  annotate.xml  annotate.xml.in  blur.xml  blur.xml.in  clone.xml  clone.xml.in  core.xml  core.xml.in  cube.xml  cube.xml.in  cubereflex.xml  cubereflex.xml.in  dbus.xml  dbus.xml.in  decoration.xml  decoration.xml.in  expo.xml  expo.xml.in  fade.xml  fade.xml.in  fs.xml  fs.xml.in  gconf.xml  gconf.xml.in  glib.xml  glib.xml.in  group.xml  group.xml.in  imgjpeg.xml  imgjpeg.xml.in  ini.xml  ini.xml.in  inotify.xml  inotify.xml.in  mblur.xml  (+50 more)
plugins/: Makefile  Makefile.am  Makefile.in  annotate.c  blur.c  clone.c  cube.c  dbus.c  decoration.c  fade.c  fuse.c  gconf.c  glib.c  ini.c  inotify.c  libdecor.c  minimize.c  move.c  plane.c  png.c  regex.c  resize.c  rotate.c  scale.c  screenshot.c  svg.c  switcher.c  video.c  water.c  wobbly.c  zoom.c
po/: .intltool-merge-cache  Makefile  Makefile.in  POTFILES  af.gmo  ar.gmo  bg.gmo  bn.gmo  bs.gmo  ca.gmo  cs.gmo  cy.gmo  da.gmo  de.gmo  el.gmo  en_GB.gmo  en_US.gmo  es.gmo  et.gmo  fi.gmo  fr.gmo  gl.gmo  gu.gmo  he.gmo  hi.gmo  hr.gmo  hu.gmo  id.gmo  id.po  it.gmo  ja.gmo  ka.gmo  km.gmo  ko.gmo  lo.gmo  lt.gmo  mk.gmo  mr.gmo  nb.gmo  nl.gmo  (+18 more)
reflex/: Makefile.am  reflex.c
ring/: Makefile  Makefile.am  Makefile.in  ring.c  ring_options.c  ring_options.h
scaleaddon/: Makefile  Makefile.am  Makefile.in  scaleaddon.c  scaleaddon_options.c  scaleaddon_options.h
scalefilter/: Makefile  Makefile.am  Makefile.in  scalefilter.c  scalefilter_options.c  scalefilter_options.h
shift/: Makefile  Makefile.am  Makefile.in  shift.c  shift_options.c  shift_options.h
src/: Makefile  Makefile.am  Makefile.in  action.c  cursor.c  display.c  ecomorph  event.c  fragment.c  main.c  match.c  matrix.c  metadata.c  option.c  paint.c  plugin.c  privates.c  screen.c  session.c  texture.c  window.c
src/.deps/: cursor.Po  display.Po  event.Po  fragment.Po  main.Po  match.Po  matrix.Po  metadata.Po  option.Po  paint.Po  plugin.Po  privates.Po  screen.Po  session.Po  texture.Po  window.Po
staticswitcher/: Makefile.am  staticswitcher.c
text/: Makefile  Makefile.am  Makefile.in  text.c
thumbnail/: Makefile  Makefile.am  Makefile.in  thumbnail.c  thumbnail_options.c  thumbnail_options.h
wall/: Makefile  Makefile.am  Makefile.in  wall.c  wall_options.c  wall_options.h
